Fixed background colors on small maps.

--- a/css/openlayers.css
+++ b/css/openlayers.css
@@ -49,8 +49,6 @@ body.views-mode-map div.openlayers-views-map div.openlayers-map {
   right:0px;
   left:0px;
   bottom:0px;
-
-  background:#ccc;
   
   width:auto !important;
   height:auto !important;
